kelas istio/02. Traffic management/a. fault injection/dashboard/dashboard-external-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard-external-virtualservice
  namespace: default
spec:
  hosts:
  - sifood.default.local # domain, umumnya diasamakan dengan hosts di Gateway
  gateways:
    - "dashboard-gateway" # nama Gateway yang diingikan
  http:
  - name: "dashboard-route"
    route:
    - destination:
        host: dashboard.default.svc.cluster.local # disarankan menggunakan format DNS full (FQDN)
